// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components /Button Button in desktop screen 1`] = `
<div
  className="MuiBox-root-52 MuiBox-root-53"
>
  <div
    className="MuiBox-root-52 MuiBox-root-54"
  >
    <button
      className="MuiButtonBase-root-72 MuiButton-root-55 MuiButton-contained-63 MuiButton-containedPrimary-64"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-56"
      >
        Hower
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-52 MuiBox-root-75"
  >
    <button
      className="MuiButtonBase-root-72 MuiButtonBase-disabled-73 MuiButton-root-55 MuiButton-contained-63 MuiButton-containedPrimary-64 MuiButton-disabled-67"
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="-1"
      type="button"
    >
      <span
        className="MuiButton-label-56"
      >
        Disabled
      </span>
    </button>
  </div>
  <div
    className="MuiBox-root-52 MuiBox-root-76"
  >
    <button
      className="MuiButtonBase-root-72 MuiButton-root-55 MuiButton-contained-63 MuiButton-containedSecondary-65"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-56"
      >
        Cancel
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-52 MuiBox-root-77"
  >
    <button
      className="MuiButtonBase-root-72 MuiButton-root-55 MuiButton-text-57 MuiButton-textPrimary-58"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-56"
      >
        Back
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-52 MuiBox-root-78"
  >
    <button
      className="MuiButtonBase-root-72 MuiButton-root-55 MuiButton-contained-63 MuiButton-containedPrimary-64 MuiButton-fullWidth-71"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-56"
      >
        Full Width
      </span>
      <span
        className="MuiTouchRipple-root-79"
      />
    </button>
  </div>
</div>
`;

exports[`Storyshots Components /Button Button in phone screen 1`] = `
<div
  style={
    Object {
      "width": "425px",
    }
  }
>
  <div
    className="MuiBox-root-8 MuiBox-root-9"
  >
    <div
      className="MuiBox-root-8 MuiBox-root-10"
    >
      <button
        className="MuiButtonBase-root-28 MuiButton-root-11 MuiButton-contained-19 MuiButton-containedPrimary-20"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-12"
        >
          Hower
        </span>
        <span
          className="MuiTouchRipple-root-35"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-8 MuiBox-root-31"
    >
      <button
        className="MuiButtonBase-root-28 MuiButtonBase-disabled-29 MuiButton-root-11 MuiButton-contained-19 MuiButton-containedPrimary-20 MuiButton-disabled-23"
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="-1"
        type="button"
      >
        <span
          className="MuiButton-label-12"
        >
          Disabled
        </span>
      </button>
    </div>
    <div
      className="MuiBox-root-8 MuiBox-root-32"
    >
      <button
        className="MuiButtonBase-root-28 MuiButton-root-11 MuiButton-contained-19 MuiButton-containedSecondary-21"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-12"
        >
          Cancel
        </span>
        <span
          className="MuiTouchRipple-root-35"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-8 MuiBox-root-33"
    >
      <button
        className="MuiButtonBase-root-28 MuiButton-root-11 MuiButton-text-13 MuiButton-textPrimary-14"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-12"
        >
          Back
        </span>
        <span
          className="MuiTouchRipple-root-35"
        />
      </button>
    </div>
    <div
      className="MuiBox-root-8 MuiBox-root-34"
    >
      <button
        className="MuiButtonBase-root-28 MuiButton-root-11 MuiButton-contained-19 MuiButton-containedPrimary-20 MuiButton-fullWidth-27"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-12"
        >
          Full Width
        </span>
        <span
          className="MuiTouchRipple-root-35"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-327 MuiFormControl-marginNormal-328 MuiTextField-root-326"
  >
    <label
      className="MuiFormLabel-root-343 MuiInputLabel-root-331 MuiInputLabel-formControl-337 MuiInputLabel-animated-340 MuiInputLabel-shrink-339"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-363 MuiOutlinedInput-root-350 MuiInputBase-formControl-364"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-380 MuiOutlinedInput-notchedOutline-357"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-381"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-373 MuiOutlinedInput-input-358"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-399 MuiButtonBase-disabled-400 MuiButton-root-382 MuiButton-contained-390 MuiButton-containedPrimary-391 MuiButton-disabled-394"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-383"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components /forms TextField 1`] = `
<div
  className="MuiBox-root-409 MuiBox-root-410"
>
  <div
    className="MuiBox-root-409 MuiBox-root-411"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-413 MuiFormControl-marginNormal-414 MuiTextField-root-412"
      >
        <label
          className="MuiFormLabel-root-429 MuiFormLabel-error-432 MuiInputLabel-error-420 MuiInputLabel-root-417 MuiInputLabel-formControl-423 MuiInputLabel-animated-426 MuiInputLabel-shrink-425"
          data-shrink={true}
        >
          Error
        </label>
        <div
          className="MuiInputBase-root-449 MuiOutlinedInput-root-436 MuiInputBase-error-455 MuiOutlinedInput-error-441 MuiInputBase-formControl-450"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-466 MuiOutlinedInput-notchedOutline-443"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-467"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={true}
            className="MuiInputBase-input-459 MuiOutlinedInput-input-444"
            defaultValue="Standard Error"
            disabled={false}
            name="field-with-error"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
        <p
          className="MuiFormHelperText-root-468 MuiFormHelperText-contained-472 MuiFormHelperText-error-469"
        >
          This is an error message
        </p>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-409 MuiBox-root-476"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-413 MuiFormControl-marginNormal-414 MuiTextField-root-412"
      >
        <label
          className="MuiFormLabel-root-429 MuiInputLabel-root-417 MuiInputLabel-formControl-423 MuiInputLabel-animated-426 MuiInputLabel-shrink-425"
          data-shrink={true}
        >
          Filled
        </label>
        <div
          className="MuiInputBase-root-449 MuiOutlinedInput-root-436 MuiInputBase-formControl-450"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-466 MuiOutlinedInput-notchedOutline-443"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-467"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-459 MuiOutlinedInput-input-444"
            defaultValue="test*iov"
            disabled={false}
            name="field-filled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-409 MuiBox-root-477"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-413 MuiFormControl-marginNormal-414 MuiTextField-root-412"
      >
        <label
          className="MuiFormLabel-root-429 MuiFormLabel-disabled-431 MuiInputLabel-disabled-419 MuiInputLabel-root-417 MuiInputLabel-formControl-423 MuiInputLabel-animated-426 MuiInputLabel-shrink-425"
          data-shrink={true}
        >
          Disabled
        </label>
        <div
          className="MuiInputBase-root-449 MuiOutlinedInput-root-436 MuiInputBase-disabled-452 MuiOutlinedInput-disabled-438 MuiInputBase-formControl-450"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-466 MuiOutlinedInput-notchedOutline-443"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-467"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-459 MuiOutlinedInput-input-444 MuiInputBase-disabled-452 MuiOutlinedInput-disabled-438"
            defaultValue="Disabled input"
            disabled={true}
            name="standard-disabled"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-409 MuiBox-root-478"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiFormControl-root-413 MuiFormControl-marginNormal-414 MuiTextField-root-412"
      >
        <label
          className="MuiFormLabel-root-429 MuiInputLabel-root-417 MuiInputLabel-formControl-423 MuiInputLabel-animated-426 MuiInputLabel-shrink-425"
          data-shrink={true}
        >
          Empty
        </label>
        <div
          className="MuiInputBase-root-449 MuiOutlinedInput-root-436 MuiInputBase-formControl-450"
          onClick={[Function]}
        >
          <fieldset
            aria-hidden={true}
            className="MuiPrivateNotchedOutline-root-466 MuiOutlinedInput-notchedOutline-443"
            style={
              Object {
                "paddingLeft": 8,
              }
            }
          >
            <legend
              className="MuiPrivateNotchedOutline-legend-467"
              style={
                Object {
                  "width": 0.01,
                }
              }
            >
              <span
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "&#8203;",
                  }
                }
              />
            </legend>
          </fieldset>
          <input
            aria-invalid={false}
            className="MuiInputBase-input-459 MuiOutlinedInput-input-444"
            disabled={false}
            name="standard-with-placeholder"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            placeholder="IOV or wallet address"
            required={false}
            type="text"
          />
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Components /forms Form 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="MuiFormControl-root-271 MuiFormControl-marginNormal-272 MuiTextField-root-270"
  >
    <label
      className="MuiFormLabel-root-287 MuiInputLabel-root-275 MuiInputLabel-formControl-281 MuiInputLabel-animated-284 MuiInputLabel-shrink-283"
      data-shrink={true}
    >
      Unique Identifier
    </label>
    <div
      className="MuiInputBase-root-307 MuiOutlinedInput-root-294 MuiInputBase-formControl-308"
      onClick={[Function]}
    >
      <fieldset
        aria-hidden={true}
        className="MuiPrivateNotchedOutline-root-324 MuiOutlinedInput-notchedOutline-301"
        style={
          Object {
            "paddingLeft": 8,
          }
        }
      >
        <legend
          className="MuiPrivateNotchedOutline-legend-325"
          style={
            Object {
              "width": 0.01,
            }
          }
        >
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "&#8203;",
              }
            }
          />
        </legend>
      </fieldset>
      <input
        aria-invalid={false}
        className="MuiInputBase-input-317 MuiOutlinedInput-input-302"
        disabled={false}
        name="uniqueIdentifier"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        placeholder="Unique Identifier"
        required={false}
        type="text"
      />
    </div>
  </div>
  <button
    className="MuiButtonBase-root-343 MuiButtonBase-disabled-344 MuiButton-root-326 MuiButton-contained-334 MuiButton-containedPrimary-335 MuiButton-disabled-338"
    disabled={true}
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="-1"
    type="submit"
  >
    <span
      className="MuiButton-label-327"
    >
      Submit
    </span>
  </button>
  <pre>
    {}
  </pre>
</form>
`;

exports[`Storyshots Components Images 1`] = `
<img
  alt="Iov Logo"
  className="makeStyles-root-96"
  src="iov-logo.png"
/>
`;

exports[`Storyshots Components Layout 1`] = `
<div
  className="MuiBox-root-108 MuiBox-root-109"
>
  <div
    className="MuiBox-root-108 MuiBox-root-110"
  >
    <h4
      className="MuiTypography-root-112 MuiTypography-h4-120 MuiTypography-colorPrimary-135 makeStyles-inline-111"
    >
      Title
    </h4>
    <h4
      className="MuiTypography-root-112 MuiTypography-h4-120 makeStyles-inline-111"
    >

      storybook
    </h4>
  </div>
  <div
    className="MuiBox-root-108 MuiBox-root-142"
  >
    <h6
      className="MuiTypography-root-112 MuiTypography-h6-122"
    >
      Layout content
    </h6>
  </div>
  <div
    className="MuiBox-root-108 MuiBox-root-143"
  />
  <div
    className="MuiBox-root-108 MuiBox-root-144"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-145"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Components Switch 1`] = `
Array [
  <div
    className="MuiBox-root-157 MuiBox-root-158"
  >
    <label
      className="MuiFormControlLabel-root-159"
    >
      <span
        className="MuiSwitch-root-165"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-187 MuiIconButton-root-178 MuiPrivateSwitchBase-root-174 MuiSwitch-switchBase-168 MuiSwitch-colorPrimary-170"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-186"
          >
            <span
              className="MuiSwitch-icon-166"
            />
            <input
              className="MuiPrivateSwitchBase-input-177"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-221"
          />
        </span>
        <span
          className="MuiSwitch-bar-173"
        />
      </span>
      <span
        className="MuiTypography-root-190 MuiTypography-body1-192 MuiFormControlLabel-label-164"
      >
        With label
      </span>
    </label>
  </div>,
  <div
    className="MuiBox-root-157 MuiBox-root-220"
  >
    <label
      className="MuiFormControlLabel-root-159"
    >
      <span
        className="MuiSwitch-root-165"
      >
        <span
          aria-disabled={false}
          className="MuiButtonBase-root-187 MuiIconButton-root-178 MuiPrivateSwitchBase-root-174 MuiSwitch-switchBase-168 MuiSwitch-colorPrimary-170"
          onBlur={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-186"
          >
            <span
              className="MuiSwitch-icon-166"
            />
            <input
              className="MuiPrivateSwitchBase-input-177"
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-221"
          />
        </span>
        <span
          className="MuiSwitch-bar-173"
        />
      </span>
      <span
        className="MuiTypography-root-190 MuiTypography-body1-192 MuiFormControlLabel-label-164"
      />
    </label>
  </div>,
]
`;

exports[`Storyshots Components Tooltip 1`] = `
Array [
  <div
    className="MuiBox-root-238 MuiBox-root-239"
  >
    <div
      className="makeStyles-container-241"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-244"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
  <div
    className="MuiBox-root-238 MuiBox-root-249"
  >
    <p
      className="MuiTypography-root-251 MuiTypography-body1-253 makeStyles-inline-250"
      style={
        Object {
          "marginRight": "4px",
        }
      }
    >
      Loooooooooooooooooooooooooooooooooong text
    </p>
    <div
      className="makeStyles-container-241"
      onClick={[Function]}
    >
      <img
        alt="Info"
        className="makeStyles-root-244"
        height={16}
        src="info_normal.svg"
        width={16}
      />
    </div>
  </div>,
]
`;

exports[`Storyshots Components Typography 1`] = `
Array [
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300 MuiTypography-colorPrimary-312"
  >
    H4
  </h6>,
  <h4
    className="MuiTypography-root-289 MuiTypography-h4-297"
  >
    Main headings
  </h4>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300 MuiTypography-colorPrimary-312"
  >
    H5
  </h6>,
  <h5
    className="MuiTypography-root-289 MuiTypography-h5-298"
  >
    Heading 2
  </h5>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300 MuiTypography-colorPrimary-312"
  >
    H6
  </h6>,
  <h6
    className="MuiTypography-root-289 MuiTypography-h6-299"
  >
    Subheading
  </h6>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300 MuiTypography-colorPrimary-312"
  >
    body1
  </h6>,
  <p
    className="MuiTypography-root-289 MuiTypography-body1-291"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300 MuiTypography-colorPrimary-312"
  >
    body2
  </h6>,
  <p
    className="MuiTypography-root-289 MuiTypography-body2-290"
  >
    Lorem ipsum dolor sit amet
  </p>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300 MuiTypography-colorPrimary-312"
  >
    subtitle1
  </h6>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300 MuiTypography-colorPrimary-312"
  >
    subtitle2
  </h6>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle2-301"
  >
    Text field label
  </h6>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle1-300 MuiTypography-colorPrimary-312"
  >
    Inline styles
  </h6>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle2-301 MuiTypography-colorPrimary-312 makeStyles-inline-288"
  >
    First part of the text.
  </h6>,
  <h6
    className="MuiTypography-root-289 MuiTypography-subtitle2-301 makeStyles-inline-288"
  >
    Second part of the text.
  </h6>,
]
`;

exports[`Storyshots Routes/Signup New account page 1`] = `
<div
  className="MuiBox-root-486 MuiBox-root-487"
  id="/signup1"
>
  <div
    className="MuiBox-root-486 MuiBox-root-488"
  >
    <h4
      className="MuiTypography-root-490 MuiTypography-h4-498 MuiTypography-colorPrimary-513 makeStyles-inline-489"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-490 MuiTypography-h4-498 makeStyles-inline-489"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-486 MuiBox-root-520"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-486 MuiBox-root-521"
      >
        <div
          className="MuiFormControl-root-523 MuiFormControl-marginNormal-524 MuiFormControl-fullWidth-526 MuiTextField-root-522"
        >
          <label
            className="MuiFormLabel-root-539 MuiFormLabel-required-544 MuiInputLabel-required-531 MuiInputLabel-root-527 MuiInputLabel-formControl-533 MuiInputLabel-animated-536 MuiInputLabel-shrink-535"
            data-shrink={true}
          >
            Account name
            <span
              className="MuiFormLabel-asterisk-545 MuiInputLabel-asterisk-532"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-559 MuiOutlinedInput-root-546 MuiInputBase-fullWidth-568 MuiInputBase-formControl-560"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-576 MuiOutlinedInput-notchedOutline-553"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-577"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-569 MuiOutlinedInput-input-554"
              disabled={false}
              name="accountNameField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Account name"
              required={true}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-486 MuiBox-root-578"
      >
        <div
          className="MuiFormControl-root-523 MuiFormControl-marginNormal-524 MuiFormControl-fullWidth-526 MuiTextField-root-522"
        >
          <label
            className="MuiFormLabel-root-539 MuiFormLabel-required-544 MuiInputLabel-required-531 MuiInputLabel-root-527 MuiInputLabel-formControl-533 MuiInputLabel-animated-536 MuiInputLabel-shrink-535"
            data-shrink={true}
          >
            Password
            <span
              className="MuiFormLabel-asterisk-545 MuiInputLabel-asterisk-532"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-559 MuiOutlinedInput-root-546 MuiInputBase-fullWidth-568 MuiInputBase-formControl-560"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-576 MuiOutlinedInput-notchedOutline-553"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-577"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-569 MuiOutlinedInput-input-554 MuiInputBase-inputType-572"
              disabled={false}
              name="passwordInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-486 MuiBox-root-579"
      >
        <div
          className="MuiFormControl-root-523 MuiFormControl-marginNormal-524 MuiFormControl-fullWidth-526 MuiTextField-root-522"
        >
          <label
            className="MuiFormLabel-root-539 MuiFormLabel-required-544 MuiInputLabel-required-531 MuiInputLabel-root-527 MuiInputLabel-formControl-533 MuiInputLabel-animated-536 MuiInputLabel-shrink-535"
            data-shrink={true}
          >
            Confirm Password
            <span
              className="MuiFormLabel-asterisk-545 MuiInputLabel-asterisk-532"
            >
               *
            </span>
          </label>
          <div
            className="MuiInputBase-root-559 MuiOutlinedInput-root-546 MuiInputBase-fullWidth-568 MuiInputBase-formControl-560"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-576 MuiOutlinedInput-notchedOutline-553"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-577"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-569 MuiOutlinedInput-input-554 MuiInputBase-inputType-572"
              disabled={false}
              name="passwordConfirmInputField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Confirm Password"
              required={true}
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-486 MuiBox-root-580"
      >
        <div
          className="MuiBox-root-486 MuiBox-root-581"
        >
          <button
            className="MuiButtonBase-root-599 MuiButton-root-582 MuiButton-text-584 MuiButton-textPrimary-585 MuiButton-fullWidth-598"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-583"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root-610"
            />
          </button>
        </div>
        <div
          className="MuiBox-root-486 MuiBox-root-602"
        >
          <button
            className="MuiButtonBase-root-599 MuiButtonBase-disabled-600 MuiButton-root-582 MuiButton-contained-590 MuiButton-containedPrimary-591 MuiButton-disabled-594 MuiButton-fullWidth-598"
            disabled={true}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="-1"
            type="submit"
          >
            <span
              className="MuiButton-label-583"
            >
              Continue
            </span>
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-486 MuiBox-root-603"
  />
  <div
    className="MuiBox-root-486 MuiBox-root-604"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-605"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Recovery Phrase page 1`] = `
<div
  className="MuiBox-root-627 MuiBox-root-628"
  id="/signup2"
>
  <div
    className="MuiBox-root-627 MuiBox-root-629"
  >
    <h4
      className="MuiTypography-root-631 MuiTypography-h4-639 MuiTypography-colorPrimary-654 makeStyles-inline-630"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-631 MuiTypography-h4-639 makeStyles-inline-630"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-627 MuiBox-root-661"
  >
    <div
      className="MuiBox-root-627 MuiBox-root-662"
    >
      <div
        className="MuiBox-root-627 MuiBox-root-663"
      >
        <div
          className="MuiBox-root-627 MuiBox-root-664"
        >
          <h6
            className="MuiTypography-root-631 MuiTypography-subtitle2-643 makeStyles-inline-630"
          >
            Activate Recovery Phrase?
          </h6>
        </div>
        <div
          className="makeStyles-container-666"
          onClick={[Function]}
        >
          <img
            alt="Info"
            className="makeStyles-root-669"
            height={16}
            src="info_normal.svg"
            width={16}
          />
        </div>
      </div>
      <label
        className="MuiFormControlLabel-root-674"
      >
        <span
          className="MuiSwitch-root-680"
        >
          <span
            aria-disabled={false}
            className="MuiButtonBase-root-702 MuiIconButton-root-693 MuiPrivateSwitchBase-root-689 MuiSwitch-switchBase-683 MuiSwitch-colorPrimary-685"
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={null}
          >
            <span
              className="MuiIconButton-label-701"
            >
              <span
                className="MuiSwitch-icon-681"
              />
              <input
                className="MuiPrivateSwitchBase-input-692"
                onChange={[Function]}
                type="checkbox"
              />
            </span>
            <span
              className="MuiTouchRipple-root-728"
            />
          </span>
          <span
            className="MuiSwitch-bar-688"
          />
        </span>
        <span
          className="MuiTypography-root-631 MuiTypography-body1-633 MuiFormControlLabel-label-679"
        />
      </label>
    </div>
    <div
      className="MuiBox-root-627 MuiBox-root-705"
    >
      <p
        className="MuiTypography-root-631 MuiTypography-body1-633 makeStyles-inline-630"
      >

      </p>
    </div>
    <div
      className="MuiBox-root-627 MuiBox-root-706"
    >
      <div
        className="MuiBox-root-627 MuiBox-root-707"
      >
        <button
          className="MuiButtonBase-root-702 MuiButton-root-708 MuiButton-text-710 MuiButton-textPrimary-711 MuiButton-fullWidth-724"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-709"
          >
            Back
          </span>
          <span
            className="MuiTouchRipple-root-728"
          />
        </button>
      </div>
      <div
        className="MuiBox-root-627 MuiBox-root-725"
      >
        <button
          className="MuiButtonBase-root-702 MuiButton-root-708 MuiButton-contained-716 MuiButton-containedPrimary-717 MuiButton-fullWidth-724"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex="0"
          type="button"
        >
          <span
            className="MuiButton-label-709"
          >
            Continue
          </span>
          <span
            className="MuiTouchRipple-root-728"
          />
        </button>
      </div>
    </div>
  </div>
  <div
    className="MuiBox-root-627 MuiBox-root-726"
  />
  <div
    className="MuiBox-root-627 MuiBox-root-727"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-669"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Signup Security hint page 1`] = `
<div
  className="MuiBox-root-745 MuiBox-root-746"
  id="/signup3"
>
  <div
    className="MuiBox-root-745 MuiBox-root-747"
  >
    <h4
      className="MuiTypography-root-749 MuiTypography-h4-757 MuiTypography-colorPrimary-772 makeStyles-inline-748"
    >
      New
    </h4>
    <h4
      className="MuiTypography-root-749 MuiTypography-h4-757 makeStyles-inline-748"
    >

      Account
    </h4>
  </div>
  <div
    className="MuiBox-root-745 MuiBox-root-779"
  >
    <h6
      className="MuiTypography-root-749 MuiTypography-subtitle1-760 makeStyles-inline-748"
    >
      To help you remember your details in the future please provide a security hint:
    </h6>
    <form
      onSubmit={[Function]}
    >
      <div
        className="MuiBox-root-745 MuiBox-root-780"
      >
        <div
          className="MuiFormControl-root-782 MuiFormControl-marginNormal-783 MuiFormControl-fullWidth-785 MuiTextField-root-781"
        >
          <div
            className="MuiInputBase-root-799 MuiOutlinedInput-root-786 MuiInputBase-fullWidth-808 MuiInputBase-formControl-800"
            onClick={[Function]}
          >
            <fieldset
              aria-hidden={true}
              className="MuiPrivateNotchedOutline-root-816 MuiOutlinedInput-notchedOutline-793"
              style={
                Object {
                  "paddingLeft": 8,
                }
              }
            >
              <legend
                className="MuiPrivateNotchedOutline-legend-817"
                style={
                  Object {
                    "width": 0.01,
                  }
                }
              >
                <span
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "&#8203;",
                    }
                  }
                />
              </legend>
            </fieldset>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-809 MuiOutlinedInput-input-794"
              disabled={false}
              name="securityHintField"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Security hint"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="MuiBox-root-745 MuiBox-root-818"
      >
        <div
          className="MuiBox-root-745 MuiBox-root-819"
        >
          <button
            className="MuiButtonBase-root-837 MuiButton-root-820 MuiButton-text-822 MuiButton-textPrimary-823 MuiButton-fullWidth-836"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiButton-label-821"
            >
              Back
            </span>
            <span
              className="MuiTouchRipple-root-848"
            />
          </button>
        </div>
        <div
          className="MuiBox-root-745 MuiBox-root-840"
        >
          <button
            className="MuiButtonBase-root-837 MuiButton-root-820 MuiButton-contained-828 MuiButton-containedPrimary-829 MuiButton-fullWidth-836"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="submit"
          >
            <span
              className="MuiButton-label-821"
            >
              Create
            </span>
            <span
              className="MuiTouchRipple-root-848"
            />
          </button>
        </div>
      </div>
    </form>
  </div>
  <div
    className="MuiBox-root-745 MuiBox-root-841"
  />
  <div
    className="MuiBox-root-745 MuiBox-root-842"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-843"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;

exports[`Storyshots Routes/Welcome Welcome page 1`] = `
<div
  className="MuiBox-root-865 MuiBox-root-866"
  id="/welcome"
>
  <div
    className="MuiBox-root-865 MuiBox-root-867"
  >
    <h4
      className="MuiTypography-root-869 MuiTypography-h4-877 MuiTypography-colorPrimary-892 makeStyles-inline-868"
    >
      Welcome
    </h4>
    <h4
      className="MuiTypography-root-869 MuiTypography-h4-877 makeStyles-inline-868"
    >

      to your IOV manager
    </h4>
  </div>
  <div
    className="MuiBox-root-865 MuiBox-root-899"
  >
    <p
      className="MuiTypography-root-869 MuiTypography-body1-871 makeStyles-inline-868"
    >
      This plugin lets you manage all your accounts in one place.
    </p>
    <div
      className="MuiBox-root-865 MuiBox-root-900"
    />
    <button
      className="MuiButtonBase-root-918 MuiButton-root-901 MuiButton-contained-909 MuiButton-containedPrimary-910 MuiButton-fullWidth-917"
      disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-902"
      >
        Log in
      </span>
      <span
        className="MuiTouchRipple-root-930"
      />
    </button>
    <div
      className="MuiBox-root-865 MuiBox-root-921"
    />
    <button
      className="MuiButtonBase-root-918 MuiButton-root-901 MuiButton-contained-909 MuiButton-containedPrimary-910 MuiButton-fullWidth-917"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-902"
      >
        New account
      </span>
      <span
        className="MuiTouchRipple-root-930"
      />
    </button>
    <div
      className="MuiBox-root-865 MuiBox-root-922"
    />
    <button
      className="MuiButtonBase-root-918 MuiButton-root-901 MuiButton-contained-909 MuiButton-containedPrimary-910 MuiButton-fullWidth-917"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-902"
      >
        Import account
      </span>
      <span
        className="MuiTouchRipple-root-930"
      />
    </button>
  </div>
  <div
    className="MuiBox-root-865 MuiBox-root-923"
  />
  <div
    className="MuiBox-root-865 MuiBox-root-924"
  >
    <img
      alt="IOV logo"
      className="makeStyles-root-925"
      height={39}
      src="iov-logo.png"
      width={84}
    />
  </div>
</div>
`;
